Fixed overflow issue

--- a/cvat-ui/src/components/project-page/styles.scss
+++ b/cvat-ui/src/components/project-page/styles.scss
@@ -4,6 +4,11 @@
 
 @import '../../base.scss';
 
+.cvat-project-page {
+    overflow-y: auto;
+    height: 100%;
+}
+
 .cvat-project-details {
     width: 100%;
     height: auto;
@@ -53,8 +58,4 @@
 .cvat-project-top-bar-actions > button {
     display: flex;
     align-items: center;
-}
-
-.ant-layout-content {
-    overflow-y: auto;
 }
